fix font-size change on iphone in landscape

--- a/css/less/alerts_tags.less
+++ b/css/less/alerts_tags.less
@@ -1,4 +1,5 @@
 alert, tag{
+  font-size: @fontSize;
   font-style: normal;
   background: lighten(@warning, 50%);
   border: 1px solid lighten(@warning, 38%);
