--- a/css/less/classes.less
+++ b/css/less/classes.less
@@ -1,8 +1,4 @@
 //CLASSES
-.radio, .checkbox, input, select, .select, .btn, alert, tag{
-  .iconSizes(); 
-}
-
 .user-select-none{
     -webkit-user-select: none;
        -moz-user-select: none;
