--- a/css/less/mixins.less
+++ b/css/less/mixins.less
@@ -1,9 +1,4 @@
-.iconSizes () {
-  i{ font-size: @fontSize; }
-  &.small{ i{ font-size: @iconSize; } }
-  &.medium{ i{ font-size: @iconSize; } }
-  &.large{ i{ font-size: @iconSize; } }
-}
+
 
 .boxSizing () {
   -webkit-box-sizing: border-box;
