--- a/css/less/mobile.less
+++ b/css/less/mobile.less
@@ -1,14 +1,8 @@
 html.responsive{
+    -webkit-text-size-adjust: none; /* Prevent font scaling in landscape */
+
     aside{
         display: none;
-    }
-    
-    body{
-        font-size: 80%;
-    }
-    
-    .radio, .checkbox, input, select, .select, .btn, alert, tag{
-        .iconSizes();
     }
 
     nav a{
